force-app/main/default/objects/Comment__c/fields/Comment_Message__c.field-meta.xml
<CustomField>
    <fullName>Comment_Message__c</fullName>
    <label>Comment Message</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>