force-app/main/default/objects/Comment__c/fields/Comment_User__c.field-meta.xml
<CustomField>
    <fullName>Comment_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comment User</label>
    <referenceTo>User_Login_Detail__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comment_User</relationshipName>
    <type>Lookup</type>
</CustomField>