force-app/main/default/objects/Comment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Comment_Message__c</columns>
    <columns>Post__c</columns>
    <columns>Comment_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>